p7/tests/t063.err
Semantic error on line 6: Cannot += an expression of type 'double' to a variable of type 'int'.
