p7/tests/t063.gpl
int i = 42;
double x = 3.145;

on akey
{
    i += x;
}
